Added additional credit to NBC.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             The other reason is that I wanted to 'get something out there' demonstrating my coding ability while I work on getting my other 'true' full-stack DDWA projects live and online.
                         </p>
                         <p>
-                            Methodology: I downloaded NBC's CSVs for data scientists from their story, parsed the CSVs to JSON arrays consisting of both an array of Twitter account objects and one consisting of Twitter post objects associated with Twitter identified Russian troll accounts. I then began extracting the data using AJAX calls locally against the parsed JSON files to 'see what I could glean'. The charts are made possible by a great JS CDN called Plot.ly. The source code for this project is located on my Github page (<a href="https://github.com/EJBergamini/2016ElectionsShenanigans" target="_blank">2016ElectionsShenanigans</a>).
+                            Methodology: I downloaded NBC's CSVs 'for researchers' from their story, parsed the CSVs to JSON arrays consisting of both an array of Twitter account objects and one consisting of Twitter post objects associated with Twitter identified Russian troll accounts. I then began extracting the data using AJAX calls locally against the parsed JSON files to 'see what I could glean'. The charts are made possible by a great JS CDN called Plot.ly. The source code for this project is located on my Github page (<a href="https://github.com/EJBergamini/2016ElectionsShenanigans" target="_blank">2016ElectionsShenanigans</a>).
                         </p>
                     </div>
                     <div class="col-xs-3"></div>
@@ -147,6 +147,9 @@
                         </p>
                         <p>
                             Conversely, I'm not interested in a debate regarding whether or not meddling did or did not happen, as far as I am concerned the issue is closed. Remit 'alternative fact' theories instead to <a href="https://www.reddit.com/r/politics/">/r/politics</a>.
+                        </p>
+                        <p>
+                            Special thanks to NBC for deciding to open source this data.
                         </p>
                     </div>
                     <div class="col-xs-3"></div>
